[EJBBOOK-42] Upgrade integration tests to use JBoss AS 7.0.1.Final